--- a/index.HTML
+++ b/index.HTML
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campo alegre</title>
+</head>
+<body>
+ <h1>Campo alegre</h1>
+    
+<p>desse site voce vai a encontrar </p>
 
+
+
+</body>
+</html>
