--- a/index.HTML
+++ b/index.HTML
@@ -6,9 +6,17 @@
     <title>Campo alegre</title>
 </head>
 <body>
- <h1>Campo alegre</h1>
+,<header></header>
+ <Este campo foi criado para fornecer uma visao completa e deltahada sobre o producto em questao.Aqui voce pode incluir informaçoes essenciais  
+ como o nome do producto, suas caracteristicas principais,funcionalidades,beneficios em qualquer detalhe que possa ajudar ao cliente a atender
+ 
+ <main>
+
+
     
-<p>desse site voce vai a encontrar </p>
+ </main>
+
+
 
 
 
