--- a/index.HTML
+++ b/index.HTML
@@ -6,19 +6,37 @@
     <title>Campo alegre</title>
 </head>
 <body>
-,<header></header>
- <Este campo foi criado para fornecer uma visao completa e deltahada sobre o producto em questao.Aqui voce pode incluir informaçoes essenciais  
- como o nome do producto, suas caracteristicas principais,funcionalidades,beneficios em qualquer detalhe que possa ajudar ao cliente a atender
- 
- <main>
+    <header>
+
+    </header>
+    <main>  
+        <div>
+            <h1>Campo alegre</h1>
 
 
-    
- </main>
-
-
+        </div>
 
 
 
+    </main>
+    <footer>
+
+
+    </footer>      
 </body>
 </html>
+
+    <header>
+
+    </header>
+    <main>  
+
+
+    </main>
+    <footer>
+
+
+    </footer>   
+    Este campo foi criado para fornecer uma visao completa e deltahada sobre o producto em questao.Aqui voce pode incluir informaçoes
+    essenciais como o nome do producto,suas caracteristicas principais,funcionalidade,beneficios em qualquer detalhe que possa ajudar ao
+    cliente a atender com uma extasao maravilhosa
