--- a/index.HTML
+++ b/index.HTML
@@ -12,31 +12,40 @@
     <main>  
         <div>
             <h1>Campo alegre</h1>
-
-
+            <p>
+                Este campo foi criado para fornecer uma visao completa e deltahada sobre o producto em questao.Aqui voce pode incluir informaçoes
+                essenciais como o nome do producto,suas caracteristicas principais,funcionalidade,beneficios em qualquer detalhe que possa ajudar ao
+                cliente a atender com uma extasao maravilhosa
+           </p>
         </div>
-
-
-
+        
+        <div>
+            <p>
+                O campo é caracterizado por ser uma área com grandes extensões de terra, baixa
+                densidade populacional e forte ligação com atividades agrícolas e pecuárias. As pessoas
+                que vivem no campo geralmente estão envolvidas na produção de alimentos, como frutas
+                As paisagens campestres são marcadas por áreas abertas
+                <p>
+                     Campo ou prado é um tipo de bioma ou vegetação terrestre caracterizado pela predominância da vegetação
+                     graminoide, normalmente constituída de gramíneas, ciperácias e juncos, com diferentes graus de ocorrência de 
+                     arbustos e árvores.
+                </p>
+            </p>
+                        
+        </div>
+            <h2>campo alegre</h2>
+            <p>
+                é usada para atividades agrícolas, como plantio de
+                culturas, criação de animais ou até mesmo para lazer e conservação. 
+            </p>
     </main>
-    <footer>
-
-
-    </footer>      
+            <footer>
+                <p>Uma pagina desenvolvida por Jesus</p>
+            </footer>      
 </body>
 </html>
 
-    <header>
 
-    </header>
-    <main>  
-
-
-    </main>
-    <footer>
-
-
-    </footer>   
     Este campo foi criado para fornecer uma visao completa e deltahada sobre o producto em questao.Aqui voce pode incluir informaçoes
     essenciais como o nome do producto,suas caracteristicas principais,funcionalidade,beneficios em qualquer detalhe que possa ajudar ao
     cliente a atender com uma extasao maravilhosa
